--- a/finaldilutiondaogenerator/build.gradle
+++ b/finaldilutiondaogenerator/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'de.greenrobot:greendao-generator:2.1.0'
 }
