--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light">
         <activity
             android:name=".view.StartupActivity"
             android:label="@string/title_activity_startup">
@@ -20,14 +20,13 @@
         </activity>
         <activity
             android:name=".view.EditActivity"
-            android:label="@string/title_activity_edit"></activity>
+            android:label="@string/title_activity_edit" />
         <activity
             android:name=".view.PrepActivity"
-            android:label="@string/title_activity_prepare"></activity>
+            android:label="@string/title_activity_prepare" />
         <activity
             android:name=".view.CompoundActivity"
-            android:label="@string/title_activity_compound">
-        </activity>
+            android:label="@string/title_activity_compound" />
     </application>
 
 </manifest>
