--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
@@ -45,4 +46,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     //compile 'org.apache.commons:commons-csv:1.5'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
