--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,16 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.1'
 
     defaultConfig {
         applicationId "com.labessence.biotech.finaldilution"
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -42,12 +43,12 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:1.9.5'
     testImplementation 'junit:junit:4.12'
     //compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
+    implementation 'com.android.support:design:28.0.0-beta01'
     //compile 'org.apache.commons:commons-csv:1.5'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 }
 repositories {
     mavenCentral()
