--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,13 @@
         android:name="com.labessence.biotech.finaldilution.ApplicationContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:theme="@style/FinalDilutionTheme">
         <activity
             android:name=".peripherals.view.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -23,7 +21,7 @@
             android:label="@string/title_activity_startup" />
         <activity
             android:name=".solution.view.EditActivity"
-            android:label="@string/title_activity_edit" />
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".component.view.CompoundActivity"
             android:label="@string/title_activity_compound" />
