Passing solution in Intents, Added logs to passed arguments.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".component.view.CompoundActivity"
+            android:noHistory="true"
             android:label="@string/title_activity_compound" />
     </application>
 
