--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/FinalDilutionTheme">
         <activity
-            android:name=".peripherals.view.SplashActivity"
+            android:name=".init.view.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".peripherals.view.StartupActivity"
+            android:name=".init.view.StartupActivity"
             android:label="@string/title_activity_startup" />
         <activity
             android:name=".solution.view.EditActivity"
