New compound mockup, refactored names

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".solution.view.EditActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".component.view.CompoundActivity"
+            android:name=".component.view.EditComponentActivity"
             android:noHistory="true"
             android:label="@string/title_activity_compound" />
     </application>
