--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion '28.0.1'
 
     defaultConfig {
-        applicationId "com.labessence.biotech.finaldilution"
+        applicationId "com.labwhisper.biotech.finaldilution"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -16,7 +16,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
