--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <application
         android:name="com.labwhisper.biotech.finaldilution.ApplicationContext"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_professore"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/FinalDilutionTheme">
         <activity
