--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,21 +3,31 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    signingConfigs {
+        config {
+        }
+    }
     compileSdkVersion 28
     buildToolsVersion '28.0.1'
-
     defaultConfig {
         applicationId "com.labwhisper.biotech.finaldilution"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.0.1"
         multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        stage {
+            minifyEnabled true
+            debuggable true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     packagingOptions {
@@ -53,4 +63,7 @@ dependencies {
 }
 repositories {
     mavenCentral()
+}
+configurations {
+    all*.exclude group: 'commons-logging', module: 'commons-logging'
 }
