--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     //compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
-    implementation 'com.android.support:design:28.0.0-beta01'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     //compile 'org.apache.commons:commons-csv:1.5'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.opencsv:opencsv:4.5'
 }
 repositories {
