--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.labwhisper.biotech.finaldilution"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 4
-        versionName "1.0.0.3"
+        versionCode 5
+        versionName '1.0.0.5'
         multiDexEnabled true
     }
     buildTypes {
@@ -60,6 +60,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.opencsv:opencsv:4.5'
+    compile 'com.android.support:multidex:1.0.3'
 }
 repositories {
     mavenCentral()
