Bug: gly doesn't search for Glycerine

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:label="@string/title_activity_startup" />
         <activity
             android:name="com.labwhisper.biotech.finaldilution.solution.view.EditActivity"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
