--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         }
     }
     compileSdkVersion 28
-    buildToolsVersion '28.0.1'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.labwhisper.biotech.finaldilution"
         minSdkVersion 19
@@ -54,13 +54,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     //compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
     //compile 'org.apache.commons:commons-csv:1.5'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.opencsv:opencsv:4.5'
-    compile 'com.android.support:multidex:1.0.3'
+    compile 'androidx.multidex:multidex:2.0.0'
 }
 repositories {
     mavenCentral()
