--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.opencsv:opencsv:4.5'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 }
 repositories {
     mavenCentral()
