--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
 }
 
