👽️ Update to API 34, gradle 8.7

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 *.iml
 .gradle
 /local.properties
-/.idea/
-/.idea/modules.xml
+/.idea/caches
 /.idea/libraries
-/.idea/caches/build_file_checksums.ser
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
